// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`objToDom should convert a bold item 1`] = `
<body>
  <div>
    <div>
      <b
        class="gen_b"
        style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial bold; font-family: Arial; font-weight: bold; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
      >
        demo bold text
      </b>
    </div>
  </div>
</body>
`;

exports[`objToDom should convert a centered div component 1`] = `
<body>
  <div>
    <div>
      <div
        class="gen_div"
        style="color: black; padding: 0px; margin: 0px; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 100mm; width: 20mm; text-align: center; display: flex; justify-content: center;"
      >
        <div
          class="gen_div_line"
          style="color: black; padding: 0px; margin: 0px; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 100mm; width: 20mm; text-align: center; display: flex; justify-content: center; min-height: 4.5mm;"
        >
          Hello World
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`objToDom should convert a centered div component 2`] = `
<div>
  <div>
    <div
      class="gen_div"
      style="color: black; padding: 0px; margin: 0px; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 100mm; width: 20mm; text-align: center; display: flex; justify-content: center;"
    >
      <div
        class="gen_div_line"
        style="color: black; padding: 0px; margin: 0px; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 100mm; width: 20mm; text-align: center; display: flex; justify-content: center; min-height: 4.5mm;"
      >
        Hello World
      </div>
    </div>
  </div>
</div>
`;

exports[`objToDom should convert a div item 1`] = `
<body>
  <div>
    <div>
      <div
        class="gen_div"
        style="color: black; padding: 0px; margin: 0px; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 100mm; width: 20mm; text-align: left; display: auto;"
      >
        <div
          class="gen_div_line"
          style="color: black; padding: 0px; margin: 0px; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 100mm; width: 20mm; text-align: left; display: auto; min-height: 4.5mm;"
        >
          Hello World
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`objToDom should convert a div with children item 1`] = `
<body>
  <div>
    <div>
      <div
        class="gen_div"
        style="color: black; padding: 0px; margin: 0px; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 100mm; width: 20mm; text-align: left; display: auto;"
      >
        <p
          class="gen_p"
          style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
        >
          Hello World
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`objToDom should convert a heading item 1`] = `
<body>
  <div>
    <div>
      <h3
        class="gen_h3"
        style="color: black; height: 4.56mm; padding: 0px; margin: 0px; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 4.56mm; text-align: left; display: auto;"
      >
        demo header
      </h3>
    </div>
  </div>
</body>
`;

exports[`objToDom should convert a horizontal rule item 1`] = `
<body>
  <div>
    <div>
      <hr
        class="gen_hr"
        style="margin-top: 9.5px; margin-bottom: 19.5px;"
      />
    </div>
  </div>
</body>
`;

exports[`objToDom should convert a img item 1`] = `
<body>
  <div>
    <div>
      <img
        alt="Demo Img"
        class="gen_img"
        src="/images/logo.png"
        style="color: black; line-height: 4.5mm; display: block; padding: 0px; margin: 0px; height: auto; width: auto; max-width: 50mm; max-height: 20mm;"
      />
    </div>
  </div>
</body>
`;

exports[`objToDom should convert a paragraph item 1`] = `
<body>
  <div>
    <div>
      <p
        class="gen_p"
        style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
      >
        demo paragraph
      </p>
    </div>
  </div>
</body>
`;

exports[`objToDom should convert a span item 1`] = `
<body>
  <div>
    <div>
      <span
        class="gen_span"
        style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
      >
        demo span
      </span>
    </div>
  </div>
</body>
`;

exports[`objToDom should convert a table item 1`] = `
<body>
  <div>
    <div>
      <div
        class="docTable"
        style="padding: 0px; margin: 0px; height: 57.56mm; width: 140mm; display: flex; flex-direction: column;"
      >
        <div
          class="docTable_row"
          style="width: 140mm; height: 4.56mm; display: flex; border-bottom: 0.2mm solid black; margin-bottom: 3mm;"
        >
          <div
            class="docTable_cell_heading"
            style="width: 20mm; height: 4.56mm; padding: 0px; line-height: 4.56mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              NAME
            </p>
          </div>
          <div
            class="docTable_cell_heading"
            style="width: 30mm; height: 4.56mm; padding: 0px; line-height: 4.56mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              PLACE
            </p>
          </div>
          <div
            class="docTable_cell_heading"
            style="width: 30mm; height: 4.56mm; padding: 0px; line-height: 4.56mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              INFO
            </p>
          </div>
          <div
            class="docTable_cell_heading"
            style="width: 60mm; height: 4.56mm; padding: 0px; line-height: 4.56mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              DESCRIPTION
            </p>
          </div>
        </div>
        <div
          class="docTable_row"
          style="width: 140mm; height: 20mm; display: flex;"
        >
          <div
            class="docTable_cell"
            style="width: 20mm; height: 20mm; padding: 0px; line-height: 20mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              Hello
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 30mm; height: 20mm; padding: 0px; line-height: 20mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              World
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 30mm; height: 20mm; padding: 0px; line-height: 20mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              This
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 60mm; height: 20mm; padding: 0px; line-height: 20mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              Is some information
            </p>
          </div>
        </div>
        <div
          class="docTable_row"
          style="width: 140mm; height: 30mm; display: flex;"
        >
          <div
            class="docTable_cell"
            style="width: 20mm; height: 30mm; padding: 0px; line-height: 30mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              Another
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 30mm; height: 30mm; padding: 0px; line-height: 30mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              Place
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 30mm; height: 30mm; padding: 0px; line-height: 30mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              This
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 60mm; height: 30mm; padding: 0px; line-height: 30mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              Is some information
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`objToDom should convert a table item with nested objs 1`] = `
<body>
  <div>
    <div>
      <div
        class="docTable"
        style="padding: 0px; margin: 0px; height: 83mm; width: 140mm; display: flex; flex-direction: column;"
      >
        <div
          class="docTable_row"
          style="width: 140mm; height: 30mm; display: flex; border-bottom: 0.2mm solid black; margin-bottom: 3mm;"
        >
          <div
            class="docTable_cell_heading"
            style="width: 20mm; height: 30mm; padding: 0px 3mm 3mm 0px; line-height: 30mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              NAME
            </p>
          </div>
          <div
            class="docTable_cell_heading"
            style="width: 30mm; height: 30mm; padding: 0px 3mm 3mm 0px; line-height: 30mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              PLACE
            </p>
          </div>
          <div
            class="docTable_cell_heading"
            style="width: 30mm; height: 30mm; padding: 0px 3mm 3mm 0px; line-height: 30mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              INFO
            </p>
          </div>
          <div
            class="docTable_cell_heading"
            style="width: 60mm; height: 30mm; padding: 0px 3mm 3mm 0px; line-height: 30mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              DESCRIPTION
            </p>
          </div>
        </div>
        <div
          class="docTable_row"
          style="width: 140mm; height: 20mm; display: flex;"
        >
          <div
            class="docTable_cell"
            style="width: 20mm; height: 20mm; padding: 0px 3mm 3mm 0px; line-height: 20mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              Hello
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 30mm; height: 20mm; padding: 0px 3mm 3mm 0px; line-height: 20mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              World
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 30mm; height: 20mm; padding: 0px 3mm 3mm 0px; line-height: 20mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              This
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 60mm; height: 20mm; padding: 0px 3mm 3mm 0px; line-height: 20mm;"
          >
            <img
              alt="Demo Img"
              class="gen_img"
              src="/images/logo.png"
              style="color: black; line-height: 4.5mm; display: block; padding: 0px; margin: 0px; height: auto; width: auto; max-width: 50mm; max-height: 20mm;"
            />
          </div>
        </div>
        <div
          class="docTable_row"
          style="width: 140mm; height: 30mm; display: flex;"
        >
          <div
            class="docTable_cell"
            style="width: 20mm; height: 30mm; padding: 0px 3mm 3mm 0px; line-height: 30mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              Hello
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 30mm; height: 30mm; padding: 0px 3mm 3mm 0px; line-height: 30mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              World
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 30mm; height: 30mm; padding: 0px 3mm 3mm 0px; line-height: 30mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              This
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 60mm; height: 30mm; padding: 0px 3mm 3mm 0px; line-height: 30mm;"
          >
            <img
              alt="Demo Img"
              class="gen_img"
              src="/images/logo.png"
              style="color: black; line-height: 4.5mm; display: block; padding: 0px; margin: 0px; height: auto; width: auto; max-width: 50mm; max-height: 20mm;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`objToDom should convert a table that is calculated 1`] = `
<body>
  <div>
    <div>
      <div
        class="docTable"
        style="padding: 0px; margin: 0px; height: 95.06mm; width: 130mm; display: flex; flex-direction: column;"
      >
        <div
          class="docTable_row"
          style="width: 130mm; height: 4.56mm; display: flex; border-bottom: 0.2mm solid black; margin-bottom: 3mm;"
        >
          <div
            class="docTable_cell_heading"
            style="width: 20mm; height: 4.56mm; padding: 0px 3mm 3mm 0px; line-height: 4.56mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              NAME
            </p>
          </div>
          <div
            class="docTable_cell_heading"
            style="width: 40mm; height: 4.56mm; padding: 0px 3mm 3mm 0px; line-height: 4.56mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              PLACE
            </p>
          </div>
          <div
            class="docTable_cell_heading"
            style="width: 40mm; height: 4.56mm; padding: 0px 3mm 3mm 0px; line-height: 4.56mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              INFO
            </p>
          </div>
          <div
            class="docTable_cell_heading"
            style="width: 30mm; height: 4.56mm; padding: 0px 3mm 3mm 0px; line-height: 4.56mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              DESCRIPTION
            </p>
          </div>
        </div>
        <div
          class="docTable_row"
          style="width: 130mm; height: 7.5mm; display: flex;"
        >
          <div
            class="docTable_cell"
            style="width: 20mm; height: 7.5mm; padding: 0px 3mm 3mm 0px; line-height: 7.5mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              Hello
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 40mm; height: 7.5mm; padding: 0px 3mm 3mm 0px; line-height: 7.5mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              World
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 40mm; height: 7.5mm; padding: 0px 3mm 3mm 0px; line-height: 7.5mm;"
          >
            <div
              class="gen_div"
              style="color: black; padding: 0px; margin: 0px; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; width: auto; text-align: left; display: auto;"
            >
              <div
                class="gen_div_line"
                style="color: black; padding: 0px; margin: 0px; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; width: auto; text-align: left; display: auto; min-height: 4.5mm;"
              >
                 This is some really long text and more text that should overflow
              </div>
            </div>
          </div>
          <div
            class="docTable_cell"
            style="width: 30mm; height: 7.5mm; padding: 0px 3mm 3mm 0px; line-height: 7.5mm;"
          >
            <div
              class="gen_div"
              style="color: black; padding: 0px; margin: 0px; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; width: auto; text-align: left; display: auto;"
            >
              <div
                class="gen_div_line"
                style="color: black; padding: 0px; margin: 0px; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; width: auto; text-align: left; display: auto; min-height: 4.5mm;"
              >
                Is some information
              </div>
            </div>
          </div>
        </div>
        <div
          class="docTable_row"
          style="width: 130mm; height: 53mm; display: flex;"
        >
          <div
            class="docTable_cell"
            style="width: 20mm; height: 53mm; padding: 0px 3mm 3mm 0px; line-height: 53mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              Another
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 40mm; height: 53mm; padding: 0px 3mm 3mm 0px; line-height: 53mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              World
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 40mm; height: 53mm; padding: 0px 3mm 3mm 0px; line-height: 53mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              This
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 30mm; height: 53mm; padding: 0px 3mm 3mm 0px; line-height: 53mm;"
          >
            <div
              class="gen_div"
              style="color: black; padding: 0px; margin: 0px; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 50mm; width: auto; text-align: left; display: auto;"
            >
              <div
                class="gen_div_line"
                style="color: black; padding: 0px; margin: 0px; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 50mm; width: auto; text-align: left; display: auto; min-height: 4.5mm;"
              >
                boxed content
              </div>
            </div>
          </div>
        </div>
        <div
          class="docTable_row"
          style="width: 130mm; height: 27mm; display: flex;"
        >
          <div
            class="docTable_cell"
            style="width: 20mm; height: 27mm; padding: 0px 3mm 3mm 0px; line-height: 27mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
            >
              a
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 40mm; height: 27mm; padding: 0px 3mm 3mm 0px; line-height: 27mm;"
          >
            <div
              class="gen_div"
              style="color: black; padding: 0px; margin: 0px; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: auto; width: 24mm; text-align: left; display: auto;"
            >
              <div
                class="gen_div_line"
                style="color: black; padding: 0px; margin: 0px; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: auto; width: 24mm; text-align: left; display: auto; min-height: 4.5mm;"
              >
                b
              </div>
            </div>
          </div>
          <div
            class="docTable_cell"
            style="width: 40mm; height: 27mm; padding: 0px 3mm 3mm 0px; line-height: 27mm;"
          >
            <p
              class="gen_p"
              style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: right; display: flex; justify-content: flex-end;"
            >
              10
            </p>
          </div>
          <div
            class="docTable_cell"
            style="width: 30mm; height: 27mm; padding: 0px 3mm 3mm 0px; line-height: 27mm;"
          >
            <img
              alt=" "
              class="gen_img"
              src="http://localhost:3000/d.jpg"
              style="color: black; line-height: 4.5mm; display: block; padding: 0px; margin: 0px; height: auto; width: auto; max-width: 44mm; max-height: 24mm;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`objToDom should handle full page elements 1`] = `
Object {
  "body": Object {
    "content": Array [
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {
          "font": "100 4mm/4.5mm  Arial",
          "fontFamily": "Arial",
          "fontSize": "3.8mm",
          "fontWeight": 100,
          "lineHeight": "4.5mm",
          "margin": 0,
          "overflow": "hidden",
          "padding": 0,
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        },
        "text": "Hello",
        "type": "p",
        "uid": 0,
      },
      Object {
        "height": "auto",
        "id": "MISSING_ID",
        "type": "pagebreak",
        "uid": 0,
      },
      Object {
        "content": Array [
          Object {
            "align": "left",
            "font": "100 4mm/4.5mm  Arial",
            "height": 4.5,
            "id": "MISSING_ID",
            "style": Object {
              "font": "100 4mm/4.5mm  Arial",
              "fontFamily": "Arial",
              "fontSize": "3.8mm",
              "fontWeight": 100,
              "lineHeight": "4.5mm",
              "margin": 0,
              "overflow": "hidden",
              "padding": 0,
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            },
            "text": "Full page",
            "type": "p",
            "uid": 0,
          },
        ],
        "height": "auto",
        "id": "MISSING_ID",
        "type": "full_page",
        "uid": 0,
      },
      Object {
        "height": "auto",
        "id": "MISSING_ID",
        "type": "pagebreak",
        "uid": 0,
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {
          "font": "100 4mm/4.5mm  Arial",
          "fontFamily": "Arial",
          "fontSize": "3.8mm",
          "fontWeight": 100,
          "lineHeight": "4.5mm",
          "margin": 0,
          "overflow": "hidden",
          "padding": 0,
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        },
        "text": "World",
        "type": "p",
        "uid": 0,
      },
    ],
  },
  "footer": Object {
    "content": Array [
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {
          "font": "100 4mm/4.5mm  Arial",
          "fontFamily": "Arial",
          "fontSize": "3.8mm",
          "fontWeight": 100,
          "lineHeight": "4.5mm",
          "margin": 0,
          "overflow": "hidden",
          "padding": 0,
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        },
        "text": "Footer",
        "type": "p",
        "uid": 0,
      },
    ],
  },
  "header": Object {
    "content": Array [
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {
          "font": "100 4mm/4.5mm  Arial",
          "fontFamily": "Arial",
          "fontSize": "3.8mm",
          "fontWeight": 100,
          "lineHeight": "4.5mm",
          "margin": 0,
          "overflow": "hidden",
          "padding": 0,
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        },
        "text": "Header",
        "type": "p",
        "uid": 0,
      },
    ],
  },
}
`;

exports[`objToDom should handle full page elements 2`] = `
<body>
  <div>
    <div
      class=""
    >
      <div
        data-testid="docGen-pageInner"
        style="padding: 10mm 10mm 10mm 10mm;"
      >
        <div
          data-testid="docGen-section-body"
          id="body"
          style="height: 217mm; position: relative;"
        >
          <p
            class="gen_p"
            style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
          >
            Hello
          </p>
          <div
            class="gen_pagebreak"
            style="height: auto;"
          />
          <div
            data-testid="docGen-pageInner"
            style="padding: 10mm 10mm 10mm 10mm;"
          >
            <div
              data-testid="docGen-section-body"
              id="body"
              style="height: 276mm; position: relative;"
            >
              <p
                class="gen_p"
                style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm;"
              />
            </div>
          </div>
          <div
            class="gen_pagebreak"
            style="height: auto;"
          />
          <p
            class="gen_p"
            style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
          >
            World
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`objToDom should not convert simple string to paragraph 1`] = `
<body>
  <div>
    <div>
      <p
        class="gen_p"
        style="color: black; padding: 0px; margin: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font: Arial 100; font-family: Arial; font-weight: 100; font-size: 3.8mm; height: 4.5mm; text-align: left; display: auto;"
      >
        Hello World
      </p>
    </div>
  </div>
</body>
`;
